ajuste: /forms + loading

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,9 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+
+    <!-- Link vai ser manipulavel durante o app React (habilitando/desabilitando o preload) -->
+    <link href="./photo-empty.webp" as="image" />
   </head>
   <body>
     <div id="root"></div>
