hotfix: Correção de um bug na page /forms

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     />
 
     <!-- Link vai ser manipulavel durante o app React (habilitando/desabilitando o preload) -->
-    <link href="./photo-empty.webp" as="image" />
+    <link href="/photo-empty.webp" as="image" />
   </head>
   <body>
     <div id="root"></div>
